# fresh

./: .commitlintrc.js  .gitignore  Cargo.toml  README-cz.md  README.md
.github/workflows/: ci.yml  release.yml  test.yml
client/: Cargo.toml
client/src/: connection.rs  input.rs  line.rs  main.rs  message.rs  screen.rs
client/src/util/: styles.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  line.rs  proto.rs  room.rs  screen.rs  socket.rs  user.rs  util.rs
docs/: presentation.md
server/: Cargo.toml
server/src/: connection.rs  main.rs  message.rs  processing.rs
