[package]
name = "fresh-client"
version = "0.2.0"
authors = ["David Frnoch <frnoch@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
simplelog = "0.12.1"
crossterm = "0.26.1"
clap = { version = "4.2.1", features = ["derive"] }
common = { path = "../common" }
