[package]
name = "fresh-server"
version = "1.2.0"
authors = ["David Frnoch <frnoch@pm.me>"]
edition = "2021"
repository = "https://github.com/lnxcz/fresh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.1"
clap = { version = "4.2.1", features = ["derive"] }
smallvec = "1.6.1"
common = { path = "../common" }
